# hello_wgpu-rs

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  shader.wgsl.bak  texture.rs
