[package]
name = "hello_wgpu-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
winit = "0.25.0"
cgmath = {version = "0.18.0", features = ["swizzle"]}
env_logger = "0.9.0"
log = "0.4.14"
wgpu = "0.9.0"
pollster = "0.2.4"
bytemuck = {version = "1.7.2", features = ["derive"] }
anyhow = "1.0.42"
tobj = "3.1.0"

[build-dependencies]
anyhow = "1.0.42"
fs_extra = "1.2.0"
glob = "0.3.0"