[package]
name = "hello_wgpu-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
cfg-if = "1"
cgmath = {version = "0.18", features = ["swizzle"]}
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = {version = "1.4", features = ["derive"]}
anyhow = "1.0"
tobj = {version = "3.2", features = ["async"]}
wgpu = "0.12" # Failing when updated to version 0.12

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
